--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,16 @@
 	<!-- 解决One or more constraints have not been satisfied问题 -->
 	<profiles>
 		<profile>
-			<id>jdk-1.8</id>
+			<id>jdk-1.7</id>
 			<!-- 另外一种激活方式 -->
 			<activation>
 				<activeByDefault>true</activeByDefault>
-				<jdk>1.8</jdk>
+				<jdk>1.7</jdk>
 			</activation>
 			<properties>
-				<maven.compiler.source>1.8</maven.compiler.source>
-				<maven.compiler.target>1.8</maven.compiler.target>
-				<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+				<maven.compiler.source>1.7</maven.compiler.source>
+				<maven.compiler.target>1.7</maven.compiler.target>
+				<maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
 			</properties>
 		</profile>
 	</profiles>
@@ -234,7 +234,7 @@
 			<version>2.8.1</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-all</artifactId>
 			<version>5.9.0</version>
@@ -243,7 +243,7 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-pool</artifactId>
 			<version>5.9.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
@@ -265,8 +265,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
