--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<!-- 读取spring配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:conf/spring.xml
+		<param-value>classpath*:conf/spring.xml
 		</param-value>
 	</context-param>
 
@@ -62,7 +62,7 @@
 	<context-param>
 		<!-- 日志配置文件路径 -->
 		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:log4j.properties</param-value>
+		<param-value>classpath:/log4j.properties</param-value>
 	</context-param>
 	<context-param>
 		<!-- 日志页面的刷新间隔 -->
@@ -79,7 +79,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:conf/spring-mvc.xml</param-value>
+			<param-value>classpath*:conf/spring-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
